--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.HangmanApp"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".ParticlesActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,8 +27,10 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
