--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 11 18:55:29 CET 2022
-sdk.dir=E\:\\AndroidSDK
+#Sun Nov 13 11:49:33 CET 2022
+sdk.dir=C\:\\Users\\eriqu\\AppData\\Local\\Android\\Sdk
