--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ConfigurationActivity"
+            android:name=".abductmania.ConfigurationActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
