--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 18 08:46:43 CET 2022
-sdk.dir=C\:\\Users\\tomeu.garcia\\AppData\\Local\\Android\\Sdk
+#Sat Nov 19 19:42:03 CET 2022
+sdk.dir=E\:\\AndroidSDK
