--- a/local.properties
+++ b/local.properties
@@ -4,15 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-<<<<<<< HEAD
-#Fri Nov 18 09:04:19 CET 2022
-sdk.dir=C\:\\Users\\aniol.barnada\\AppData\\Local\\Android\\Sdk
-=======
-#Fri Nov 18 08:46:43 CET 2022
-sdk.dir=C\:\\Users\\tomeu.garcia\\AppData\\Local\\Android\\Sdk
->>>>>>> game
-=======
-#Sat Nov 19 19:42:03 CET 2022
-sdk.dir=E\:\\AndroidSDK
->>>>>>> game
+#Thu Nov 24 18:59:08 CET 2022
+=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\eriqu\\AppData\\Local\\Android\\Sdk
+>>>>>>>=game
+<<<<<<<=HEAD
