--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 24 18:59:08 CET 2022
+#Fri Nov 25 09:17:43 CET 2022
 =\=\=\=\=\=\=
-sdk.dir=C\:\\Users\\eriqu\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\eric.lopez\\AppData\\Local\\Android\\Sdk
 >>>>>>>=game
 <<<<<<<=HEAD
