--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 26 16:48:59 CET 2022
+#Sun Nov 27 11:39:17 CET 2022
 =\=\=\=\=\=\=
-sdk.dir=E\:\\AndroidSDK
+sdk.dir=C\:\\Users\\eriqu\\AppData\\Local\\Android\\Sdk
 >>>>>>>=game
 <<<<<<<=HEAD
