--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 27 11:39:17 CET 2022
+#Thu Dec 15 18:10:51 CET 2022
 =\=\=\=\=\=\=
-sdk.dir=C\:\\Users\\eriqu\\AppData\\Local\\Android\\Sdk
+sdk.dir=E\:\\AndroidSDK
 >>>>>>>=game
 <<<<<<<=HEAD
