--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".abductmania.SplashScreenActivity"
+            android:name=".abductmania.SplashScreen.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
                 android:value="false" />
         </activity>
         <activity
-            android:name=".abductmania.LoginActivity"
+            android:name=".abductmania.Login.LoginActivity"
             android:windowSoftInputMode="stateUnchanged|adjustResize"
             android:exported="false">
             <meta-data
@@ -36,7 +36,7 @@
                 android:value="false" />
         </activity>
         <activity
-            android:name=".abductmania.RegisterActivity"
+            android:name=".abductmania.Register.RegisterActivity"
             android:windowSoftInputMode="stateUnchanged|adjustResize"
             android:exported="false">
             <meta-data
@@ -44,28 +44,28 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".abductmania.MainMenuActivity"
+            android:name=".abductmania.MainMenu.MainMenuActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="false" />
         </activity>
         <activity
-            android:name=".abductmania.ConfigurationActivity"
+            android:name=".abductmania.Config.ConfigurationActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="false" />
         </activity>
         <activity
-            android:name=".abductmania.RankingActivity"
+            android:name=".abductmania.Ranking.RankingActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="false" />
         </activity>
         <activity
-            android:name=".abductmania.HangmanGameActivity"
+            android:name=".abductmania.Game.HangmanGameActivity"
             android:exported="false">
 
             <meta-data
