--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 15 18:10:51 CET 2022
+#Fri Dec 23 09:55:55 CET 2022
 =\=\=\=\=\=\=
-sdk.dir=E\:\\AndroidSDK
+sdk.dir=C\:\\Users\\eric.lopez\\AppData\\Local\\Android\\Sdk
 >>>>>>>=game
 <<<<<<<=HEAD
