--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     //implementation "androidx.fragment:fragment-ktx:1.5.5"
 
     // Ads
-    //implementation 'com.google.android.gms:play-services-ads:21.3.0'
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
 
     // MVVM
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
