--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-7847710980451886~7925495047" />
 
+        <receiver android:name=".abductmania.Notifications.NotificationReceiver"/>
+
         <activity
             android:name=".abductmania.SplashScreen.SplashScreenActivity"
             android:exported="true"
