--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 23 09:55:55 CET 2022
+#Tue Jan 10 10:52:37 CET 2023
 =\=\=\=\=\=\=
-sdk.dir=C\:\\Users\\eric.lopez\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\tomeu.garcia\\AppData\\Local\\Android\\Sdk
 >>>>>>>=game
 <<<<<<<=HEAD
